# huffman

./: CMakeLists.txt  README.md
include/: huffman.h
src/: huffman.cpp  main.cpp
test/: test.cpp
